syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.leapxpert.usermanagement.grpc";
option java_outer_classname = "UserManagementProto";

package usermanagement;

service UserManagement {
  rpc getUsers (GetUsersRequest) returns (UsersResponse) {}
}

message GetUsersRequest {
}

message User {
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string phone = 5;
}

message UsersResponse {
  repeated User users = 1;
}